Amarok ChangeLog
================
(C) 2002-2012 the Amarok authors.

VERSION 2.7-Beta 1
  FEATURES:
    * Amazon store: It is now possible to add items to your shopping cart using amarok:// URLs.
    * Amazon store: Use the context info applet to show further infos about a selected item.
    * New argument --debug-audio to enable Phonon debugging.

  CHANGES:
    * Last.fm Skip button removed; Last.fm API no longer provides it. (BR 305576)
    * Optional liblastfm dependency raised to 1.0.0. (BR 302597)
    * Add composer button to wikipedia applet (BR 272982)

  BUGFIXES:
    * Repeat playlist correctly with a single track playlist. (BR 290955)
    * Don't append playlist when pressing enter while editing. (BR 305203)
    * Fix track transfer to iPods in de (and perhaps other) locale. (BR 305134)

VERSION 2.6
  BUGFIXES:
    * Fix problems when sql server is not reachable (BR 298425)
    * Fix crash with exporting playlists with invalid tracks (BR 303056, BR 302607, BR 297816)

VERSION 2.6-RC
  CHANGES:
    * Show all audio and video files in file browser. (BR 303253)
    * Remove codec install support. It's long ago been implemented in phonon.
    * Prevent lags with large Saved playlists. (BR 301700)
    * Increase minimal required ffmpeg version up to 0.7.
    * Use audio-x-generic icon for bit rate, not a generic one. (BR 302753)
    * Add Amarok.Playlist.playMediaList() script bindings for API symmetry.
    * Building the spectrum analyzer applet can now be disabled with a CMake
      argument.

  BUGFIXES:
    * Fix a regression where play count would be increased by 2. (BR 299890)
    * Don't loose statistics, labels and lyrics upon collection scan in some
      circumstances, e.g. when disk holding colleciton is swapped. (BR 298275)
    * Don't loose statistics, labels and lyrics when changing metadata of a
      track (not tagged by afttagger) followed by moving it. (BR 292245)
    * Fix Amarok.Playlist.{add,play}Media() and addMediaList() Qt script